# Wheeled-Robot-Soccer-Simulator

./: CMakeLists.txt  README.md  package.xml
include/simulator/: ball_gazebo.hh  referee.hpp  robot_gazebo.hh  robot_gazebo_new_control.hpp  robot_gazebo_second.hpp
launch/: simulator.launch
models/KRI_Nasional/: model.sdf
models/iris_cyan/: model.config  model.sdf
models/iris_cyan/meshes/: collision.dae
models/robot_magenta/: model.sdf
models/robot_magenta/meshes/: rival_frame1.dae
msg/: robot2sim.msg
scripts/: camera_read_cyan_1.py  camera_read_cyan_2.py  camera_read_cyan_3.py  spawn_ball.sh  spawn_new_model.sh  spawn_robot.sh  spawn_simulation_entity.sh
src/: ball_gazebo.cpp  referee.cpp  robot_gazebo.cpp  robot_gazebo_new_control.cpp  robot_gazebo_second.cpp
worlds/: kri_nasional.world
